; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/allwinner/extr_axp81x.c_axp8xx_regdev_map.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/allwinner/extr_axp81x.c_axp8xx_regdev_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.axp8xx_softc = type { i32, %struct.TYPE_4__** }
%struct.TYPE_4__ = type { i64, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i64 }

@ENXIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i64, i32, i32*, i64*)* @axp8xx_regdev_map to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @axp8xx_regdev_map(i32 %0, i64 %1, i32 %2, i32* %3, i64* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i64*, align 8
  %12 = alloca %struct.axp8xx_softc*, align 8
  %13 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i64 %1, i64* %8, align 8
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i64* %4, i64** %11, align 8
  %14 = load i32, i32* %7, align 4
  %15 = call %struct.axp8xx_softc* @device_get_softc(i32 %14)
  store %struct.axp8xx_softc* %15, %struct.axp8xx_softc** %12, align 8
  store i32 0, i32* %13, align 4
  br label %16

16:                                               ; preds = %58, %5
  %17 = load i32, i32* %13, align 4
  %18 = load %struct.axp8xx_softc*, %struct.axp8xx_softc** %12, align 8
  %19 = getelementptr inbounds %struct.axp8xx_softc, %struct.axp8xx_softc* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = icmp slt i32 %17, %20
  br i1 %21, label %22, label %61

22:                                               ; preds = %16
  %23 = load %struct.axp8xx_softc*, %struct.axp8xx_softc** %12, align 8
  %24 = getelementptr inbounds %struct.axp8xx_softc, %struct.axp8xx_softc* %23, i32 0, i32 1
  %25 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %24, align 8
  %26 = load i32, i32* %13, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds %struct.TYPE_4__*, %struct.TYPE_4__** %25, i64 %27
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %28, align 8
  %30 = icmp eq %struct.TYPE_4__* %29, null
  br i1 %30, label %31, label %32

31:                                               ; preds = %22
  br label %58

32:                                               ; preds = %22
  %33 = load %struct.axp8xx_softc*, %struct.axp8xx_softc** %12, align 8
  %34 = getelementptr inbounds %struct.axp8xx_softc, %struct.axp8xx_softc* %33, i32 0, i32 1
  %35 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %34, align 8
  %36 = load i32, i32* %13, align 4
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds %struct.TYPE_4__*, %struct.TYPE_4__** %35, i64 %37
  %39 = load %struct.TYPE_4__*, %struct.TYPE_4__** %38, align 8
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 0
  %41 = load i64, i64* %40, align 8
  %42 = load i64, i64* %8, align 8
  %43 = icmp eq i64 %41, %42
  br i1 %43, label %44, label %57

44:                                               ; preds = %32
  %45 = load %struct.axp8xx_softc*, %struct.axp8xx_softc** %12, align 8
  %46 = getelementptr inbounds %struct.axp8xx_softc, %struct.axp8xx_softc* %45, i32 0, i32 1
  %47 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %46, align 8
  %48 = load i32, i32* %13, align 4
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds %struct.TYPE_4__*, %struct.TYPE_4__** %47, i64 %49
  %51 = load %struct.TYPE_4__*, %struct.TYPE_4__** %50, align 8
  %52 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %51, i32 0, i32 1
  %53 = load %struct.TYPE_3__*, %struct.TYPE_3__** %52, align 8
  %54 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %53, i32 0, i32 0
  %55 = load i64, i64* %54, align 8
  %56 = load i64*, i64** %11, align 8
  store i64 %55, i64* %56, align 8
  store i32 0, i32* %6, align 4
  br label %63

57:                                               ; preds = %32
  br label %58

58:                                               ; preds = %57, %31
  %59 = load i32, i32* %13, align 4
  %60 = add nsw i32 %59, 1
  store i32 %60, i32* %13, align 4
  br label %16

61:                                               ; preds = %16
  %62 = load i32, i32* @ENXIO, align 4
  store i32 %62, i32* %6, align 4
  br label %63

63:                                               ; preds = %61, %44
  %64 = load i32, i32* %6, align 4
  ret i32 %64
}

declare dso_local %struct.axp8xx_softc* @device_get_softc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
